--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -39,3 +39,10 @@
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
+
+.float-right {
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  width: 300px;
+}
